@@ -309,6 +309,14 @@
 #   endif
 #endif /* !defined(wxUSE_STD_CONTAINERS) */
 
+#ifndef wxUSE_STD_CONTAINERS_COMPATIBLY
+#   ifdef wxABORT_ON_CONFIG_ERROR
+#       error "wxUSE_STD_CONTAINERS_COMPATIBLY must be defined, please read comment near the top of this file."
+#   else
+#       define wxUSE_STD_CONTAINERS_COMPATIBLY 0
+#   endif
+#endif /* !defined(wxUSE_STD_CONTAINERS_COMPATIBLY) */
+
 #ifndef wxUSE_STD_STRING_CONV_IN_WXSTRING
 #   ifdef wxABORT_ON_CONFIG_ERROR
 #       error "wxUSE_STD_STRING_CONV_IN_WXSTRING must be defined, please read comment near the top of this file."
